--- a/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
+++ b/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\eHocBongSolution.Utilities\eHocBongSolution.Utilities.csproj" />
     <ProjectReference Include="..\eShopSolution.ViewModels\eShopSolution.ViewModels.csproj" />
   </ItemGroup>
 
